# rag-langchain

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  readme.md
app/: main.py  streamlit_app.py
app/agent/: create_agent.py  prompt_strategy.py  prompts.py
app/cli/: main.py
app/config/: logging_setup.py  settings.py
app/eval/: answer_eval.py  dataset.py  retrieval_eval.py  sample_answers.py  traces.py
app/middleware/: prompt_with_context.py
app/retrieval/: citations.py  filters.py  formatter.py  hybrid.py  ingest.py  lexical.py  loaders.py  normalizers.py  reranker.py  retriever.py  splitter.py  vectorstore.py
app/services/: __init__.py  chat_client.py  chat_service.py  rag_service.py
app/tools/: retrieve_context.py
data/eval/: answer_eval.jsonl  bad_cases.jsonl  retrieval_eval.jsonl
docs/: architecture-review.md  architecture.md  development.md  hybrid-search-evaluation.md  ingestion.md  project-status.md  roadmap.md  todo-done.md  todo.md
evaluation/: capture_trace.py  evaluate_answers.py  evaluate_hybrid_need.py  evaluate_hybrid_search.py  evaluate_retrieval.py  generate_answers.py
